--- a/src/styles/components/Attendance.less
+++ b/src/styles/components/Attendance.less
@@ -116,11 +116,6 @@
     transition: border 0.3s, box-shadow 0.3s, -webkit-box-shadow 0.3s;
   }
 
-  .ant-picker-cell-in-view.ant-picker-cell-selected .ant-picker-cell-inner {
-    color: #fff;
-    background: red;
-  }
-
   .ant-picker-input > input {
     position: relative;
     display: inline-block;
@@ -147,15 +142,111 @@
   }
 
   .ant-card-head {
-    min-height: 48px;
-    margin-bottom: -1px;
-    padding: 0 6px;
-    color: rgba(0, 0, 0, 0.85);
+    min-height: 40px;
+    padding: 0px 10px;
+    color: rgba(26, 26, 26, 0.85);
     font-weight: 500;
     font-size: 16px;
     background: transparent;
     border-bottom: 1px solid #f0f0f0;
     border-radius: 2px 2px 0 0;
+  }
+
+  .ant-card-head-title {
+    display: inline-block;
+    -ms-flex: 1 1;
+    flex: 1 1;
+    padding: 1px 0;
+    overflow: hidden;
+    white-space: nowrap;
+    -o-text-overflow: ellipsis;
+    text-overflow: ellipsis;
+  }
+
+  .ant-tabs-large > .ant-tabs-nav .ant-tabs-tab {
+    padding: 10px 0;
+    font-size: 14px;
+  }
+
+  .ant-tabs-tab.ant-tabs-tab-active .ant-tabs-tab-btn {
+    color: @highlight-blue;
+    font-weight: 500;
+  }
+
+  .ant-tabs-tab:hover {
+    color: @highlight-blue;
+  }
+
+  .ant-tabs-ink-bar {
+    position: absolute;
+    background: @highlight-blue;
+    pointer-events: none;
+  }
+
+  .ant-picker-time-panel-column
+    > li.ant-picker-time-panel-cell-selected
+    .ant-picker-time-panel-cell-inner {
+    color: white;
+    background: @primary-blue;
+
+    &:hover {
+      background-color: @primary-blue !important;
+      border-color: @primary-blue !important;
+      color: white;
+    }
+  }
+
+  .ant-picker-cell-in-view.ant-picker-cell-selected .ant-picker-cell-inner {
+    background-color: @primary-blue;
+  }
+
+  .ant-picker-cell-in-view.ant-picker-cell-today
+    .ant-picker-cell-inner::before {
+    border-color: @primary-blue;
+  }
+
+  .ant-switch-checked {
+    background-color: @highlight-blue;
+  }
+
+  .ant-picker-today-btn {
+    color: @primary-blue;
+  }
+
+  .ant-picker:hover,
+  .ant-picker-focused {
+    border-color: @primary-blue;
+    border-right-width: 1px !important;
+  }
+
+  .ant-checkbox-checked .ant-checkbox-inner {
+    background-color: @primary-blue;
+    border-color: @primary-blue;
+  }
+
+  .ant-select {
+    background-color: @highlight-blue;
+  }
+
+  .ant-select:not(.ant-select-disabled):hover .ant-select-selector {
+    border-color: @primary-blue;
+  }
+
+  .ant-select-item-option-selected:not(.ant-select-item-option-disabled) {
+    color: white;
+    background-color: @highlight-blue;
+  }
+
+  .ant-select-focused:not(.ant-select-disabled).ant-select-single:not(.ant-select-customize-input)
+    .ant-select-selector {
+    border-color: @highlight-blue;
+    box-shadow: 0 0 0px 1px @highlight-blue;
+  }
+
+  .ant-checkbox-wrapper:hover .ant-checkbox-inner,
+  .ant-checkbox:hover .ant-checkbox-inner,
+  .ant-checkbox-input:focus + .ant-checkbox-inner {
+    border-color: @highlight-blue;
   }
 
   .table-row-light {
