--- a/src/styles/components/SessionDetail.less
+++ b/src/styles/components/SessionDetail.less
@@ -13,6 +13,18 @@
     }
   }
 
+  .ant-btn-primary[disabled],
+  .ant-btn-primary[disabled]:hover,
+  .ant-btn-primary[disabled]:focus,
+  .ant-btn-primary[disabled]:active {
+    color: rgba(0, 0, 0, 0.25);
+    background: #f5f5f5;
+    border-color: #d9d9d9;
+    text-shadow: none;
+    -webkit-box-shadow: none;
+    box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.4), 0 4px 10px 0 rgba(0, 0, 0, 0.39);
+  }
+
   .ant-btn-secondary {
     color: @primary-blue;
     background: white;
@@ -25,14 +37,58 @@
     background: @primary-blue;
     border-color: white;
   }
+
   .ant-card-head {
-    padding: 20px 2px;
+    min-height: 40px;
+    height: 40px;
+    margin-bottom: -1px;
+    padding: 0px 10px;
     color: rgba(26, 26, 26, 0.85);
     font-weight: 500;
     font-size: 16px;
     background: transparent;
     border-bottom: 1px solid #f0f0f0;
     border-radius: 2px 2px 0 0;
+  }
+
+  .ant-card-head-title {
+    display: inline-block;
+    -ms-flex: 1 1;
+    flex: 1 1;
+    padding: 1px 0;
+    overflow: hidden;
+    white-space: nowrap;
+    -o-text-overflow: ellipsis;
+    text-overflow: ellipsis;
+  }
+
+  .ant-modal-body {
+    padding: 16px;
+    font-size: 14px;
+    line-height: 1.5715;
+    word-wrap: break-word;
+  }
+
+  .ant-modal-header {
+    padding: 16px 24px;
+    color: #fff;
+    background: #4694b4;
+    border-bottom: #4694b4;
+    box-shadow: 0px 4px 6px #525252;
+  }
+
+  h2.ant-typography,
+  .ant-typography h2 {
+    margin-bottom: 0.2em;
+    color: #fff;
+    font-weight: 600;
+    font-size: 32px;
+    line-height: 1.35;
+  }
+
+  .ant-typography strong {
+    font-weight: 600;
+    font-size: 18px;
   }
 
   .ant-card-body {
@@ -44,14 +100,6 @@
 
   .ant-card-bordered {
     border: 0px solid white;
-  }
-
-  .ant-modal-header {
-    padding: 16px 24px;
-    color: #fff;
-    background: #4694b4;
-    border-bottom: #4694b4;
-    box-shadow: 0px 4px 6px #525252;
   }
 
   h2.ant-typography,
@@ -79,6 +127,17 @@
 
   .ant-card-cover img {
     margin-top: 10px;
+  }
+
+  .ant-checkbox-checked .ant-checkbox-inner {
+    background-color: @primary-blue;
+    border-color: @primary-blue;
+  }
+
+  .ant-checkbox-wrapper:hover .ant-checkbox-inner,
+  .ant-checkbox:hover .ant-checkbox-inner,
+  .ant-checkbox-input:focus + .ant-checkbox-inner {
+    border-color: @highlight-blue;
   }
 
   .title-gray {
