--- a/src/styles/style.less
+++ b/src/styles/style.less
@@ -7,27 +7,540 @@
 @import "components/App";
 @import "components/AppHeader";
 @import "components/OrderAntD";
-@import "components/OrderList";
 @import "components/Attendance";
-@import "components/EventCalendar";
-@import "components/Events";
-@import "components/SessionDetail";
 @import "components/Event";
-@import "components/index";
-@import "components/LocationList";
-@import "components/Login";
-@import "components/MyGroup";
-@import "components/NotFound";
-@import "components/Profile";
-@import "components/ServerError";
-@import "components/SessionList";
 @import "components/Sessions";
-@import "components/Shop";
-@import "components/Signup";
+@import "components/SessionDetail";
+@import "components/index";
+@import "components/MyGroup";
+@import "components/Profile";
 @import "components/Slider";
-@import "components/Student";
-@import "components/StudentList";
-@import "components/Test";
-@import "components/TestList";
-@import "components/ItemList";
 @import "components/Home";
+
+.custom-style {
+  .ant-btn {
+    color: #fff;
+    background: @primary-blue;
+    border-color: @border-blue;
+    border-radius: 6px;
+    text-shadow: 0 -1px 0 rgb(0 0 0 / 12%);
+    box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.4), 0 4px 10px 0 rgba(0, 0, 0, 0.39);
+    &:hover {
+      background-color: @highlight-blue !important;
+      border-color: @border-blue !important;
+      color: white;
+    }
+  }
+
+  .ant-btn-primary[disabled],
+  .ant-btn-primary[disabled]:hover,
+  .ant-btn-primary[disabled]:focus,
+  .ant-btn-primary[disabled]:active {
+    color: rgba(0, 0, 0, 0.25);
+    background: #f5f5f5;
+    border-color: #d9d9d9;
+    text-shadow: none;
+    -webkit-box-shadow: none;
+    box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.4), 0 4px 10px 0 rgba(0, 0, 0, 0.39);
+  }
+
+  .ant-btn-secondary {
+    color: @primary-blue;
+    background: white;
+    border-color: @border-blue;
+    text-shadow: 0 -1px 0 rgb(0 0 0 / 12%);
+    box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.4), 0 4px 10px 0 rgba(0, 0, 0, 0.39);
+  }
+
+  .ant-btn-dangerous.ant-btn-primary {
+    color: #fff;
+    background: #ff4d4f;
+    border-color: #ff4d4f;
+    text-shadow: 0 -1px 0 rgb(0 0 0 / 12%);
+    -webkit-box-shadow: 0 2px 0 rgb(0 0 0 / 5%);
+    border-radius: 6px;
+    box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.4), 0 4px 10px 0 rgba(0, 0, 0, 0.39);
+  }
+
+  .ant-btn-primary:focus {
+    color: #fff;
+    background: @primary-blue;
+    border-color: white;
+  }
+
+  .ant-btn:focus {
+    color: #fff;
+    background: @primary-blue;
+    border-color: white;
+  }
+
+  .ant-btn-dangerous.ant-btn-primary:focus {
+    color: #fff;
+    background: #ff4d4f;
+    border-color: white;
+  }
+
+  .ant-btn-text {
+    color: @primary-blue;
+    background: #fff;
+    border-color: #fff;
+    margin-bottom: 10px;
+    font-weight: 500;
+  }
+
+  .ant-tabs-tab {
+    position: relative;
+    display: -ms-inline-flexbox;
+    display: inline-flex;
+    -ms-flex-align: center;
+    align-items: center;
+    margin: 0 32px 0 0;
+    padding: 12px 0;
+    font-size: 14px;
+    background: transparent;
+    border: 0;
+    font-weight: 500;
+    font-size: large;
+    outline: none;
+    cursor: pointer;
+  }
+
+  .ant-tabs-tab-btn {
+    outline: none;
+    color: @primary-blue;
+    font-weight: 400;
+    font-size: larger;
+  }
+
+  .ant-tabs-tab.ant-tabs-tab-active .ant-tabs-tab-btn {
+    color: @highlight-blue;
+    font-weight: 600;
+  }
+
+  .ant-tabs-top > .ant-tabs-nav .ant-tabs-ink-bar,
+  .ant-tabs-top > div > .ant-tabs-nav .ant-tabs-ink-bar {
+    bottom: 0;
+    height: 3px;
+    background-color: @highlight-blue;
+  }
+
+  .ant-card-head {
+    min-height: 40px;
+    height: 40px;
+    margin-bottom: -1px;
+    padding: 0px 10px;
+    color: rgba(26, 26, 26, 0.85);
+    font-weight: 500;
+    font-size: 16px;
+    background: transparent;
+    border-bottom: 1px solid #f0f0f0;
+    border-radius: 2px 2px 0 0;
+  }
+
+  .ant-card-head-title {
+    display: inline-block;
+    -ms-flex: 1 1;
+    flex: 1 1;
+    padding: 1px 0;
+    overflow: hidden;
+    white-space: nowrap;
+    -o-text-overflow: ellipsis;
+    text-overflow: ellipsis;
+  }
+
+  .ant-modal-body {
+    padding: 16px;
+    font-size: 14px;
+    line-height: 1.5715;
+    word-wrap: break-word;
+  }
+
+  .ant-modal-header {
+    padding: 16px 24px;
+    color: #fff;
+    background: #4694b4;
+    border-bottom: #4694b4;
+    box-shadow: 0px 4px 6px #525252;
+  }
+
+  h2.ant-typography,
+  .ant-typography h2 {
+    margin-bottom: 0.2em;
+    color: #fff;
+    font-weight: 600;
+    font-size: 32px;
+    line-height: 1.35;
+  }
+
+  h3.ant-typography,
+  .ant-typography h3 {
+    margin-bottom: 0.5em;
+    color: rgba(255, 255, 255, 1);
+    font-weight: 600;
+    font-size: 24px;
+    line-height: 1.35;
+  }
+
+  .ant-typography strong {
+    font-weight: 600;
+    font-size: 18px;
+  }
+
+  [data-theme="compact"]
+    .site-collapse-custom-collapse
+    .site-collapse-custom-panel,
+  .site-collapse-custom-collapse .site-collapse-custom-panel {
+    margin-bottom: 0px;
+    overflow: hidden;
+    background: #ffffff;
+    border: 0px;
+    border-radius: 12px;
+  }
+
+  .ant-collapse
+    > .ant-collapse-item
+    > .ant-collapse-header
+    .ant-collapse-arrow {
+    color: @primary-blue;
+    left: 0px;
+    font-size: 18px;
+  }
+
+  .ant-collapse > .ant-collapse-item > .ant-collapse-header {
+    position: relative;
+    padding: 12px 16px;
+    padding-left: 40px;
+    color: rgba(0, 0, 0, 0.85);
+    line-height: 1.5715;
+    cursor: pointer;
+    -webkit-transition: all 0.3s;
+    -o-transition: all 0.3s;
+    transition: all 0.3s;
+  }
+
+  .ant-collapse-content > .ant-collapse-content-box {
+    padding: 8px;
+  }
+
+  thead[class*="ant-table-thead"] th {
+    color: white;
+    background-color: #3b3b3b !important;
+  }
+
+  .table-row-light {
+    background-color: #ffffff;
+  }
+  .table-row-dark {
+    background-color: #fbfbfb;
+  }
+
+  .ant-picker-time-panel-column
+    > li.ant-picker-time-panel-cell-selected
+    .ant-picker-time-panel-cell-inner {
+    color: white;
+    background: @primary-blue;
+
+    &:hover {
+      background-color: @primary-blue !important;
+      border-color: @primary-blue !important;
+      color: white;
+    }
+  }
+
+  .ant-picker-cell-in-view.ant-picker-cell-selected .ant-picker-cell-inner {
+    background-color: @primary-blue;
+  }
+
+  .ant-picker-cell-in-view.ant-picker-cell-today
+    .ant-picker-cell-inner::before {
+    border-color: @primary-blue;
+  }
+
+  .ant-switch-checked {
+    background-color: @highlight-blue;
+  }
+
+  .ant-picker-today-btn {
+    color: @primary-blue;
+  }
+
+  .ant-picker:hover,
+  .ant-picker-focused {
+    border-color: @primary-blue;
+    border-right-width: 1px !important;
+  }
+
+  .ant-checkbox-checked .ant-checkbox-inner {
+    background-color: @primary-blue;
+    border-color: @primary-blue;
+  }
+
+  .ant-select {
+    background-color: @highlight-blue;
+  }
+
+  .ant-select:not(.ant-select-disabled):hover .ant-select-selector {
+    border-color: @primary-blue;
+  }
+
+  .ant-select-item-option-selected:not(.ant-select-item-option-disabled) {
+    color: white;
+    background-color: @highlight-blue;
+  }
+
+  .ant-select-focused:not(.ant-select-disabled).ant-select-single:not(.ant-select-customize-input)
+    .ant-select-selector {
+    border-color: @highlight-blue;
+    box-shadow: 0 0 0px 1px @highlight-blue;
+  }
+
+  .ant-checkbox-wrapper:hover .ant-checkbox-inner,
+  .ant-checkbox:hover .ant-checkbox-inner,
+  .ant-checkbox-input:focus + .ant-checkbox-inner {
+    border-color: @highlight-blue;
+  }
+
+  .ant-radio-checked .ant-radio-inner {
+    border-color: @highlight-blue;
+  }
+
+  .ant-radio-inner::after {
+    background-color: @highlight-blue;
+  }
+
+  .ant-btn-round.ant-btn-lg {
+    height: 60px;
+    width: 60px;
+  }
+
+  .ant-card-actions {
+    border-radius: 0px 0px 10px 10px;
+  }
+
+  .ant-card-cover img {
+    border-radius: 10px 10px 0px 0px;
+    margin-left: 1px;
+    //min-height: 170px;
+    //max-height: 170px;
+  }
+
+  .ant-card-meta-title {
+    overflow: hidden;
+    margin-bottom: -4px;
+    color: rgba(0, 0, 0, 0.85);
+    font-weight: 500;
+    font-size: 16px;
+    white-space: nowrap;
+    -o-text-overflow: ellipsis;
+    text-overflow: ellipsis;
+  }
+
+  .ant-card-meta-detail {
+    overflow: hidden;
+    margin-top: -4px;
+  }
+
+  .ant-card-meta-detail > div:not(:last-child) {
+    margin-bottom: 4px;
+  }
+
+  .title-gray {
+    display: block;
+    margin-top: 20px;
+    margin-bottom: 5px;
+    margin-inline-start: 0px;
+    margin-inline-end: 0px;
+
+    color: #9e9e9e;
+    font-size: 14px;
+    font-weight: 600;
+    line-height: 20px;
+    text-transform: uppercase;
+  }
+
+  .title-black {
+    display: block;
+    margin-top: 25px;
+    margin-bottom: 0px;
+    margin-inline-start: 0px;
+    margin-inline-end: 0px;
+
+    color: #1f1f1f;
+    font-weight: 600;
+    font-size: 18px;
+    line-height: 1.33;
+  }
+
+  .title {
+    display: block;
+    margin-block-start: 0.5em;
+    margin-bottom: 0px;
+    margin-inline-start: 0px;
+
+    color: rgb(0, 0, 0);
+    font-weight: 600;
+    font-size: 24px;
+    line-height: 1.33;
+  }
+
+  .sub-title {
+    display: block;
+    margin-top: 0px;
+    margin-bottom: 0px;
+    margin-inline-start: 0px;
+    margin-inline-end: 0px;
+
+    color: #1f1f1f;
+    font-weight: 400;
+    font-size: 13px;
+    line-height: 1.5;
+  }
+
+  .details {
+    display: block;
+    margin-block-start: 5px;
+    margin-block-end: 0.83em;
+    margin-inline-start: 0px;
+    margin-inline-end: 0px;
+
+    color: #3d3d3d;
+    font-weight: 400;
+    font-size: 16;
+    line-height: 1.5;
+  }
+
+  .grid-container {
+    display: grid;
+    grid-template-rows: auto auto auto auto auto auto;
+    margin-left: 80px;
+    margin-right: 80px;
+    grid-row-gap: 5px;
+  }
+  .grid-item {
+    background-color: rgb(230, 230, 230);
+    text-shadow: 0 1px 0 rgba(255, 255, 255, 0.7);
+    color: #6e6e6e;
+    border: 1px solid rgba(179, 179, 179, 0.8);
+    padding: 0px;
+    font-size: 14px;
+    text-align: center;
+    border-radius: 2px 2px 2px 2px;
+  }
+  .grid-item-highlight {
+    background-color: #31c731;
+    color: #f0f0f0;
+    border: 1px solid #31c731;
+    padding: 0px;
+    font-size: 14px;
+    text-align: center;
+    border-radius: 2px 2px 2px 2px;
+  }
+
+  .ant-popover-message {
+    position: relative;
+    padding: 4px 0 12px;
+    color: rgba(0, 0, 0, 0.85);
+    font-size: 14px;
+    background-color: @primary-blue;
+  }
+
+  .ant-popover-buttons {
+    margin-bottom: 4px;
+    text-align: right;
+    color: #fff;
+    background: @primary-blue;
+    border-color: @border-blue;
+    border-radius: 6px;
+    box-shadow: 0px 0px 4px 0px rgba(0, 0, 0, 0.6);
+    &:hover {
+      background-color: @highlight-blue !important;
+      border-color: @border-blue !important;
+      color: white;
+    }
+  }
+
+  .ant-picker {
+    -webkit-box-sizing: border-box;
+    box-sizing: border-box;
+    margin: 0;
+    height: 34px;
+    width: 200px;
+    padding: 0;
+    color: rgba(0, 0, 0, 0.85);
+    font-size: 16px;
+    font-variant: tabular-nums;
+    line-height: 1.5715;
+    list-style: none;
+    -webkit-font-feature-settings: "tnum";
+    font-feature-settings: "tnum";
+    padding: 0px 8px 0px;
+    position: relative;
+    display: -ms-inline-flexbox;
+    display: inline-flex;
+    -ms-flex-align: center;
+    align-items: center;
+    background: #fff;
+    border: 1px solid #d9d9d9;
+    border-radius: 2px;
+    -webkit-transition: border 0.3s, -webkit-box-shadow 0.3s;
+    transition: border 0.3s, -webkit-box-shadow 0.3s;
+    -o-transition: border 0.3s, box-shadow 0.3s;
+    transition: border 0.3s, box-shadow 0.3s;
+    transition: border 0.3s, box-shadow 0.3s, -webkit-box-shadow 0.3s;
+  }
+
+  .ant-picker-calendar-full
+    .ant-picker-panel
+    .ant-picker-calendar-date-content {
+    position: static;
+    width: auto;
+    height: 80px;
+    overflow-y: auto;
+    color: rgba(0, 0, 0, 0.85);
+    line-height: 1.5715;
+    text-align: left;
+  }
+
+  .ant-drawer-header {
+    position: relative;
+    padding: 16px 24px;
+    background-color: @primary-blue;
+    border-bottom: 1px solid @border-blue;
+    border-radius: 0px 0px 0 0;
+  }
+
+  .events {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+  }
+  .events .ant-badge-status {
+    overflow: hidden;
+    white-space: wrap;
+    width: 100%;
+    text-overflow: ellipsis;
+    font-size: 4px;
+  }
+  .notes-month {
+    text-align: center;
+    font-size: 28px;
+  }
+  .notes-month section {
+    font-size: 28px;
+  }
+
+  .ant-input-affix-wrapper:hover {
+    border-color: @highlight-blue;
+    border-right-width: 1px !important;
+  }
+
+  .ant-pagination-item-active {
+    font-weight: 500;
+    background: #fff;
+    border-color: @primary-blue;
+  }
+
+  .ant-pagination-item-active a {
+    color: @primary-blue;
+  }
+}
